# statFEMx

./: .gitignore  MIGRATION_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
apptainer/: statfemx.def
data/infinite_plate_2d/: Mesh_infPlate.m  infinite_plate.geo
docker/: Dockerfile
notebooks/: 01_bar1d_full_pipeline.ipynb  02_bar1d_prior_uq_plot.ipynb  03_bar1d_posterior_grid.ipynb  04_infinite_plate_2d_linear.ipynb
notebooks/.ipynb_checkpoints/: 01_bar1d_full_pipeline-checkpoint.ipynb  02_bar1d_prior_uq_plot-checkpoint.ipynb
scripts/: plot_bar1d_posterior_grid.py  plot_bar1d_prior_uq.py  run_bar1d_full_pipeline.py  run_infinite_plate_2d_linear.py
src/statFEMx/: __init__.py  config.py
src/statFEMx/fem/: bar1d.py  infinite_plate_2d.py
src/statFEMx/parallel/: ensemble.py
src/statFEMx/statfem/: bar1d.py
src/statFEMx/uq/: bar1d_mc.py  bar1d_pce.py
src/statFEMx/utils/: kernels.py  linalg.py
tests/: test_bar1d_math.py  test_infinite_plate_2d.py
