[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statFEMx"
version = "0.1.0"
description = "High-performance Python/FEniCSx migration bootstrap for statFEM-Recon."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "OpenAI bootstrap for VhI3/statFEM-Recon migration"}
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
  "chaospy>=4.3.13",
  "mpi4py>=4.0",
  "numba>=0.60",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]
notebooks = [
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
